apps/traefik/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.apps.lab.mxe11.nl`)
      services:
        - kind: TraefikService
          name: api@internal
        - kind: TraefikService
          name: dashboard@internal
